# servant-eventstore

./: .gitignore  servant-eventstore.cabal  stack.yaml
src/: Api.hs  App.hs  DTO.hs  Lib.hs  Requests.hs  Store.hs  Types.hs
src/Aggregate/: Class.hs  Customer.hs  Ledger.hs
static/: hellostatic.html
test/: Spec.hs
testrequests/: createcustomer.json  createledger.json  full.sh  relocatecustomer.json
