name:                servant-eventstore
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/servant-eventstore#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Api
                       App
                       Aggregate.Customer 
                       Store
                       Types

  ghc-options:   -Wall -fwarn-tabs -O0
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , bytestring
                     , eventstore
                     , hashable
                     , mtl
                     , servant-server
                     , stm
                     , text
                     , time
                     , uuid
                     , wai
                     , warp
                     
  default-language:    Haskell2010

executable servant-eventstore-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , servant-eventstore
  default-language:    Haskell2010

test-suite servant-eventstore-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , servant-eventstore
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/servant-eventstore
